--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <title>School-Book-Now</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root><i class="fa fa-spinner" aria-hidden="true">Loading...</i></app-root>
 </body>
 </html>
