restructure, connon used modules to core and routing common file

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
 </head>
 <body>
-  <app-root><i class="fa fa-spinner" aria-hidden="true">Loading...</i></app-root>
+  <app-root>Loading...</app-root>
 </body>
 </html>
